edited the styles of the table

--- a/index.html
+++ b/index.html
@@ -23,7 +23,10 @@
     </tr>
     <tr class="table__row">
         <td class="table__cell">1</td>
-        <td class="table__cell" colspan="9" rowspan="9">2</td>
+        <td class="table__cell" colspan="9" rowspan="9">
+            <img src="src/images/monopoly_man.png" alt=""><br>
+            <span class="table__title">Добро пожаловать в Монополию!</span>
+        </td>
         <td class="table__cell">11</td>
 
     </tr>
