--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <link rel="stylesheet" href="src/modules/table.css">
+    <link rel="stylesheet" href="common.css">
     <script src="src/modules/cube.js"></script>
 </head>
 <body>
