--- a/index.html
+++ b/index.html
@@ -3,83 +3,102 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link rel="stylesheet" href="src/modules/table.css">
-    <link rel="stylesheet" href="common.css">
+    <link rel="stylesheet" href="dist/style.css">
+    <link rel="stylesheet" href="">
     <script src="src/modules/cube.js"></script>
 </head>
 <body>
 <table class="table" cellspacing="0">
     <tr class="table__row">
-        <td class="table__cell">1</td>
-        <td class="table__cell">2</td>
-        <td class="table__cell">3</td>
-        <td class="table__cell">4</td>
-        <td class="table__cell">5</td>
-        <td class="table__cell">6</td>
-        <td class="table__cell">7</td>
-        <td class="table__cell">8</td>
-        <td class="table__cell">9</td>
-        <td class="table__cell">10</td>
-        <td class="table__cell">11</td>
-    </tr>
-    <tr class="table__row">
-        <td class="table__cell">1</td>
-        <td class="table__cell" colspan="9" rowspan="9">
-            <img src="src/images/monopoly_man.png" alt=""><br>
-            <span class="table__title">Добро пожаловать в Монополию!</span>
+        <td class="table__cell">
+            <div class="field"></div>
         </td>
-        <td class="table__cell">11</td>
+        <td class="table__cell">
+            <div class="field"></div>
+        </td>
+        <td class="table__cell">
+            <div class="field"></div>
+        </td>
+        <td class="table__cell">
+            <div class="field"></div>
+        </td>
+        <td class="table__cell">
+            <div class="field"></div>
+        </td>
+        <td class="table__cell">
+            <div class="field"></div>
+        </td>
+        <td class="table__cell">
+            <div class="field"></div>
+        </td>
+        <td class="table__cell">
+            <div class="field"></div>
+        </td>
+        <td class="table__cell">
+            <div class="field"></div>
+        </td>
+        <td class="table__cell">
+            <div class="field"></div>
+        </td>
+        <td class="table__cell">
+            <div class="field"></div>
+        </td>
+    </tr>
+    <tr class="table__row">
+        <td class="table__cell"></td>
+        <td class="table__cell" colspan="9" rowspan="9"></td>
+        <td class="table__cell"></td>
 
     </tr>
     <tr class="table__row">
-        <td class="table__cell">1</td>
-        <td class="table__cell" colspan="9">2</td>
+        <td class="table__cell"></td>
+        <td class="table__cell" colspan="9"></td>
 
     </tr>
     <tr class="table__row">
-        <td class="table__cell">1</td>
-        <td class="table__cell" colspan="9">2</td>
+        <td class="table__cell"></td>
+        <td class="table__cell" colspan="9"></td>
 
     </tr>
     <tr class="table__row">
-        <td class="table__cell">1</td>
-        <td class="table__cell" colspan="9">2</td>
+        <td class="table__cell"></td>
+        <td class="table__cell" colspan="9"></td>
 
     </tr>
     <tr class="table__row">
-        <td class="table__cell">1</td>
-        <td class="table__cell" colspan="9">2</td>
+        <td class="table__cell"></td>
+        <td class="table__cell" colspan="9"></td>
 
     </tr>
     <tr class="table__row">
-        <td class="table__cell">1</td>
-        <td class="table__cell" colspan="9">2</td>
+        <td class="table__cell"></td>
+        <td class="table__cell" colspan="9"></td>
 
     </tr>
     <tr class="table__row">
-        <td class="table__cell">1</td>
-        <td class="table__cell" colspan="9">2</td>
+        <td class="table__cell"></td>
+        <td class="table__cell" colspan="9"></td>
     </tr>
     <tr class="table__row">
-        <td class="table__cell">1</td>
-        <td class="table__cell" colspan="9">2</td>
+        <td class="table__cell"></td>
+        <td class="table__cell" colspan="9"></td>
     </tr>
     <tr class="table__row">
-        <td class="table__cell">1</td>
-        <td class="table__cell" colspan="9">2</td>
+        <td class="table__cell"></td>
+        <td class="table__cell" colspan="9"></td>
     </tr>
     <tr class="table__row">
-        <td class="table__cell">1</td>
-        <td class="table__cell">2</td>
-        <td class="table__cell">3</td>
-        <td class="table__cell">4</td>
-        <td class="table__cell">5</td>
-        <td class="table__cell">6</td>
-        <td class="table__cell">7</td>
-        <td class="table__cell">8</td>
-        <td class="table__cell">9</td>
-        <td class="table__cell">10</td>
-        <td class="table__cell">11</td>
+        <td class="table__cell"></td>
+        <td class="table__cell"></td>
+        <td class="table__cell"></td>
+        <td class="table__cell"></td>
+        <td class="table__cell"></td>
+        <td class="table__cell"></td>
+        <td class="table__cell"></td>
+        <td class="table__cell"></td>
+        <td class="table__cell"></td>
+        <td class="table__cell"></td>
+        <td class="table__cell"></td>
     </tr>
 </table>
 </body>
