Edited index.html file

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <link rel="stylesheet" href="dist/style.css">
-    <script src="src/modules/cube.js"></script>
+    <script src=src/index.js"></script>
+
 </head>
 <body>
 <table class="field" cellspacing="0">
@@ -171,7 +172,7 @@
                 <div class="cell__street-header cell__street-header_blue"></div>
                 <div class="cell__titles">
                     <div class="cell__titles-text">ул.арбат</div>
-                    <div class="cell__titles-text">м440</div>
+                    <div class="cell__titles-text">м60</div>
                 </div>
             </div>
         </td>
