--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Monopoly</title>
     <link rel="stylesheet" href="dist/style.css">
     <script src=src/index.js"></script>
 
