Edited layout and styles

--- a/index.html
+++ b/index.html
@@ -10,7 +10,19 @@
 <body>
 <table class="field" cellspacing="0">
     <tr class="field__row">
-        <td class="field__row-cell"></td>
+        <td class="field__row-cell">
+            <div class="field__row-cell-forward">
+                <div class="field__row-cell-forward-text">получите <br>
+                    зарплату - <br>
+                    200м. рублей,<br>
+                    когда вы проходите <br>
+                    это поле <br> <span class="field__row-cell-forward-text_big">вперед</span>
+                </div>
+                <div class="field__row-cell-forward-start">
+                    <img src="src/images/rightarrow.png" alt="Вперед">
+                </div>
+            </div>
+        </td>
         <td class="field__row-cell">
             <div class="field__row-cell-street">
                 <div class="field__row-cell-street-header field__row-cell-street-header_colors_purple"></div>
@@ -60,7 +72,11 @@
                 </div>
             </div>
         </td>
-        <td class="field__row-cell"></td>
+        <td class="field__row-cell">
+            <div class="field__row-cell-jail">
+                <img src="src/images/jail.png" alt="В тюрьме. Просто посетили тюрьму">
+            </div>
+        </td>
     </tr>
     <tr class="field__row">
         <td class="field__row-cell">
@@ -72,7 +88,19 @@
                 </div>
             </div>
         </td>
-        <td class="field__row-cell" colspan="9" rowspan="9"></td>
+        <td class="field__row-cell" colspan="9" rowspan="9">
+            <div class="field__row-cell-center">
+                <div class="field__row-cell-center-promo">
+                    <img src="src/images/cazna.png" alt="Общественная казна">
+                </div>
+                <div class="field__row-cell-center-promo">
+                    <img src="src/images/monopoly_logo.png" alt="Логотип">
+                </div>
+                <div class="field__row-cell-center-promo">
+                    <img src="src/images/question-mark.png" alt="Карточка шанс">
+                </div>
+            </div>
+        </td>
         <td class="field__row-cell">
             <div class="field__row-cell-street">
                 <div class="field__row-cell-street-header field__row-cell-street-header_colors_green"></div>
@@ -190,7 +218,11 @@
         <td class="field__row-cell" colspan="9"></td>
     </tr>
     <tr class="field__row">
-        <td class="field__row-cell"></td>
+        <td class="field__row-cell">
+            <div class="field__row-cell-tojail">
+                <img src="src/images/to-jail%20.gif" alt="Отправляйтесь в тюрьму">
+            </div>
+        </td>
         <td class="field__row-cell">
             <div class="field__row-cell-street">
                 <div class="field__row-cell-street-header field__row-cell-street-header_colors_yellow"></div>
@@ -248,7 +280,11 @@
                 </div>
             </div>
         </td>
-        <td class="field__row-cell"></td>
+        <td class="field__row-cell">
+            <div class="field__row-cell-parcing">
+                <img src="src/images/parking_large.png" alt="Отправляйтесь в тюрьму">
+            </div>
+        </td>
     </tr>
 </table>
 </body>
