implemented new component - button whith elements

--- a/index.html
+++ b/index.html
@@ -41,7 +41,14 @@
                 </div>
             </div>
         </td>
-        <td class="field__row-cell"></td>
+        <td class="field__row-cell">
+            <div class="field__row-cell-chance">
+                <div class="field__row-cell-chance-titles">шанс</div>
+                <div class="field__row-cell-chance-questions">
+                    <img src="src/images/quest_purple.png" alt="Карточка шанс">
+                </div>
+            </div>
+        </td>
         <td class="field__row-cell">
             <div class="field__row-cell-street">
                 <div class="field__row-cell-street-header field__row-cell-street-header_colors_purple"></div>
@@ -158,7 +165,14 @@
     </tr>
     <tr class="field__row">
         <td class="field__row-cell"></td>
-        <td class="field__row-cell" colspan="9"></td>
+        <td class="field__row-cell" colspan="9">
+            <div class="field__row-cell-chance">
+                <div class="field__row-cell-chance-titles">шанс</div>
+                <div class="field__row-cell-chance-questions">
+                    <img src="src/images/Orange_question.png" alt="Карточка шанс">
+                </div>
+            </div>
+        </td>
     </tr>
     <tr class="field__row">
         <td class="field__row-cell">
@@ -270,7 +284,14 @@
                 </div>
             </div>
         </td>
-        <td class="field__row-cell"></td>
+        <td class="field__row-cell">
+            <div class="field__row-cell-chance">
+                <div class="field__row-cell-chance-titles">шанс</div>
+                <div class="field__row-cell-chance-questions">
+                    <img src="src/images/quest_blue.png" alt="Карточка шанс">
+                </div>
+            </div>
+        </td>
         <td class="field__row-cell">
             <div class="field__row-cell-street">
                 <div class="field__row-cell-street-header field__row-cell-street-header_colors_red"></div>
@@ -282,10 +303,16 @@
         </td>
         <td class="field__row-cell">
             <div class="field__row-cell-parcing">
-                <img src="src/images/parking_large.png" alt="Отправляйтесь в тюрьму">
+                <img src="src/images/parking_large.png" alt="Бесплатная стоянка">
             </div>
         </td>
     </tr>
 </table>
+<div class="button">
+    <div class="button__link">
+        <a href="#" class="button__link-text">кинуть кубики</a>
+    </div>
+
+</div>
 </body>
 </html>
