edited index.html file (new elements)

--- a/index.html
+++ b/index.html
@@ -58,8 +58,23 @@
                 </div>
             </div>
         </td>
-        <td class="field__row-cell"></td>
-        <td class="field__row-cell"></td>
+        <td class="field__row-cell">
+            <div class="field__row-cell-railway">
+                <div class="field__row-cell-railway-titles">ленинградская <br> железная <br> дорога</div>
+                <div class="field__row-cell-railway-picture">
+                    <img src="src/images/Train.gif" alt="Железная дорога">
+                </div>
+                <div class="field__row-cell-railway-titles">м200</div>
+            </div>
+        </td>
+        <td class="field__row-cell">
+            <div class="field__row-cell-treasury">
+                <div class="field__row-cell-treasury-titles">общественная казна</div>
+                <div class="field__row-cell-treasury-picture">
+                    <img src="src/images/cazna.png" alt="">
+                </div>
+            </div>
+        </td>
         <td class="field__row-cell">
             <div class="field__row-cell-street">
                 <div class="field__row-cell-street-header field__row-cell-street-header_colors_broun"></div>
@@ -69,7 +84,9 @@
                 </div>
             </div>
         </td>
-        <td class="field__row-cell"></td>
+        <td class="field__row-cell">
+
+        </td>
         <td class="field__row-cell">
             <div class="field__row-cell-street">
                 <div class="field__row-cell-street-header field__row-cell-street-header_colors_broun"></div>
@@ -140,7 +157,15 @@
     </tr>
     <tr class="field__row">
         <td class="field__row-cell"></td>
-        <td class="field__row-cell" colspan="9"></td>
+        <td class="field__row-cell" colspan="9">
+            <div class="field__row-cell-railway">
+                <div class="field__row-cell-railway-titles">казанская <br> железная <br> дорога</div>
+                <div class="field__row-cell-railway-picture">
+                    <img src="src/images/Train.gif" alt="Железная дорога">
+                </div>
+                <div class="field__row-cell-railway-titles">м200</div>
+            </div>
+        </td>
     </tr>
     <tr class="field__row">
         <td class="field__row-cell">
@@ -164,7 +189,15 @@
 
     </tr>
     <tr class="field__row">
-        <td class="field__row-cell"></td>
+        <td class="field__row-cell">
+            <div class="field__row-cell-railway">
+                <div class="field__row-cell-railway-titles">рижская <br> железная <br> дорога</div>
+                <div class="field__row-cell-railway-picture">
+                    <img src="src/images/Train.gif" alt="Железная дорога">
+                </div>
+                <div class="field__row-cell-railway-titles">м200</div>
+            </div>
+        </td>
         <td class="field__row-cell" colspan="9">
             <div class="field__row-cell-chance">
                 <div class="field__row-cell-chance-titles">шанс</div>
@@ -246,7 +279,14 @@
                 </div>
             </div>
         </td>
-        <td class="field__row-cell"></td>
+        <td class="field__row-cell">
+            <div class="field__row-cell-treasury">
+                <div class="field__row-cell-treasury-titles">общественная казна</div>
+                <div class="field__row-cell-treasury-picture">
+                    <img src="src/images/cazna.png" alt="">
+                </div>
+            </div>
+        </td>
         <td class="field__row-cell">
             <div class="field__row-cell-street">
                 <div class="field__row-cell-street-header field__row-cell-street-header_colors_yellow"></div>
@@ -265,7 +305,15 @@
                 </div>
             </div>
         </td>
-        <td class="field__row-cell"></td>
+        <td class="field__row-cell">
+            <div class="field__row-cell-railway">
+                <div class="field__row-cell-railway-titles">курская <br> железная <br> дорога</div>
+                <div class="field__row-cell-railway-picture">
+                    <img src="src/images/Train.gif" alt="Железная дорога">
+                </div>
+                <div class="field__row-cell-railway-titles">м200</div>
+            </div>
+        </td>
         <td class="field__row-cell">
             <div class="field__row-cell-street">
                 <div class="field__row-cell-street-header field__row-cell-street-header_colors_red"></div>
@@ -312,7 +360,6 @@
     <div class="button__link">
         <a href="#" class="button__link-text">кинуть кубики</a>
     </div>
-
 </div>
 </body>
 </html>
