in block field implemenet elements, edited layout

--- a/index.html
+++ b/index.html
@@ -85,7 +85,13 @@
             </div>
         </td>
         <td class="field__row-cell">
-
+            <div class="field__row-cell-powerhouse">
+                <div class="field__row-cell-powerhouse-titles">сверхналог</div>
+                <div class="field__row-cell-powerhouse-picture">
+                    <img src="src/images/sverhnalog.png" alt="сверхналог">
+                </div>
+                <div class="field__row-cell-powerhouse-titles">заплати м100</div>
+            </div>
         </td>
         <td class="field__row-cell">
             <div class="field__row-cell-street">
@@ -238,10 +244,26 @@
                 </div>
             </div>
         </td>
-        <td class="field__row-cell" colspan="9"></td>
+        <td class="field__row-cell" colspan="9">
+            <div class="field__row-cell-plumbing">
+                <div class="field__row-cell-plumbing-titles">водопровод</div>
+                <div class="field__row-cell-plumbing-picture">
+                    <img src="src/images/vodoprovod.png.png" alt="водопровод">
+                </div>
+                <div class="field__row-cell-powerhouse-titles">м150</div>
+            </div>
+        </td>
     </tr>
     <tr class="field__row">
-        <td class="field__row-cell"></td>
+        <td class="field__row-cell">
+            <div class="field__row-cell-powerhouse">
+                <div class="field__row-cell-powerhouse-titles">электростанция</div>
+                <div class="field__row-cell-powerhouse-picture">
+                    <img src="src/images/lamp.png" alt="Электростанция">
+                </div>
+                <div class="field__row-cell-powerhouse-titles">м150</div>
+            </div>
+        </td>
         <td class="field__row-cell" colspan="9">
             <div class="field__row-cell-street">
                 <div class="field__row-cell-street-header field__row-cell-street-header_colors_blue"></div>
