exterminated tag <br> from layout

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
         <td class="field__row-cell"></td>
         <td class="field__row-cell" colspan="9">
             <div class="field__row-cell-railway">
-                <div class="field__row-cell-railway-titles">казанская <br> железная <br> дорога</div>
+                <div class="field__row-cell-railway-titles">казанская железная дорога</div>
                 <div class="field__row-cell-railway-picture">
                     <img src="src/images/Train.gif" alt="Железная дорога">
                 </div>
@@ -197,7 +197,7 @@
     <tr class="field__row">
         <td class="field__row-cell">
             <div class="field__row-cell-railway">
-                <div class="field__row-cell-railway-titles">рижская <br> железная <br> дорога</div>
+                <div class="field__row-cell-railway-titles">рижская железная дорога</div>
                 <div class="field__row-cell-railway-picture">
                     <img src="src/images/Train.gif" alt="Железная дорога">
                 </div>
@@ -329,7 +329,7 @@
         </td>
         <td class="field__row-cell">
             <div class="field__row-cell-railway">
-                <div class="field__row-cell-railway-titles">курская <br> железная <br> дорога</div>
+                <div class="field__row-cell-railway-titles">курская железная дорога</div>
                 <div class="field__row-cell-railway-picture">
                     <img src="src/images/Train.gif" alt="Железная дорога">
                 </div>
