--- a/src/index.html
+++ b/src/index.html
@@ -3,23 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <title>Monopoly</title>
-    <link rel="stylesheet" href="dist/style.css">
-    <script src=src/index.js"></script>
-
+    <link rel="stylesheet" href="../dist/style.css">
+    <script src="../dist/index.js"></script>
 </head>
 <body>
 <table class="field" cellspacing="0">
     <tr class="field__row">
         <td class="field__row-cell">
             <div class="field__row-cell-forward">
-                <div class="field__row-cell-forward-text">получите <br>
-                    зарплату - <br>
-                    200м. рублей,<br>
-                    когда вы проходите <br>
-                    это поле <br> <span class="field__row-cell-forward-text_big">вперед</span>
+                <div class="field__row-cell-forward-text">получите зарплату 200м. рублей когда вы проходите это поле <span class="field__row-cell-forward-text_big">вперед</span>
                 </div>
                 <div class="field__row-cell-forward-start">
-                    <img src="src/images/rightarrow.png" alt="Вперед">
+                    <img src="images/rightarrow.png" alt="Вперед">
                 </div>
             </div>
         </td>
@@ -45,7 +40,7 @@
             <div class="field__row-cell-chance">
                 <div class="field__row-cell-chance-titles">шанс</div>
                 <div class="field__row-cell-chance-questions">
-                    <img src="src/images/quest_purple.png" alt="Карточка шанс">
+                    <img src="images/quest_purple.png" alt="Карточка шанс">
                 </div>
             </div>
         </td>
@@ -62,7 +57,7 @@
             <div class="field__row-cell-railway">
                 <div class="field__row-cell-railway-titles">ленинградская <br> железная <br> дорога</div>
                 <div class="field__row-cell-railway-picture">
-                    <img src="src/images/Train.gif" alt="Железная дорога">
+                    <img src="images/Train.gif" alt="Железная дорога">
                 </div>
                 <div class="field__row-cell-railway-titles">м200</div>
             </div>
@@ -71,7 +66,7 @@
             <div class="field__row-cell-treasury">
                 <div class="field__row-cell-treasury-titles">общественная казна</div>
                 <div class="field__row-cell-treasury-picture">
-                    <img src="src/images/cazna.png" alt="">
+                    <img src="images/cazna.png" alt="">
                 </div>
             </div>
         </td>
@@ -88,7 +83,7 @@
             <div class="field__row-cell-powerhouse">
                 <div class="field__row-cell-powerhouse-titles">сверхналог</div>
                 <div class="field__row-cell-powerhouse-picture">
-                    <img src="src/images/sverhnalog.png" alt="сверхналог">
+                    <img src="images/sverhnalog.png" alt="сверхналог">
                 </div>
                 <div class="field__row-cell-powerhouse-titles">заплати м100</div>
             </div>
@@ -104,7 +99,7 @@
         </td>
         <td class="field__row-cell">
             <div class="field__row-cell-jail">
-                <img src="src/images/jail.png" alt="В тюрьме. Просто посетили тюрьму">
+                <img src="images/jail.png" alt="В тюрьме. Просто посетили тюрьму">
             </div>
         </td>
     </tr>
@@ -121,13 +116,13 @@
         <td class="field__row-cell" colspan="9" rowspan="9">
             <div class="field__row-cell-center">
                 <div class="field__row-cell-center-promo">
-                    <img src="src/images/cazna.png" alt="Общественная казна">
+                    <img src="images/cazna.png" alt="Общественная казна">
                 </div>
                 <div class="field__row-cell-center-promo">
-                    <img src="src/images/monopoly_logo.png" alt="Логотип">
+                    <img src="images/monopoly_logo.png" alt="Логотип">
                 </div>
                 <div class="field__row-cell-center-promo">
-                    <img src="src/images/question-mark.png" alt="Карточка шанс">
+                    <img src="images/question-mark.png" alt="Карточка шанс">
                 </div>
             </div>
         </td>
@@ -167,7 +162,7 @@
             <div class="field__row-cell-railway">
                 <div class="field__row-cell-railway-titles">казанская железная дорога</div>
                 <div class="field__row-cell-railway-picture">
-                    <img src="src/images/Train.gif" alt="Железная дорога">
+                    <img src="images/Train.gif" alt="Железная дорога">
                 </div>
                 <div class="field__row-cell-railway-titles">м200</div>
             </div>
@@ -199,7 +194,7 @@
             <div class="field__row-cell-railway">
                 <div class="field__row-cell-railway-titles">рижская железная дорога</div>
                 <div class="field__row-cell-railway-picture">
-                    <img src="src/images/Train.gif" alt="Железная дорога">
+                    <img src="images/Train.gif" alt="Железная дорога">
                 </div>
                 <div class="field__row-cell-railway-titles">м200</div>
             </div>
@@ -208,7 +203,7 @@
             <div class="field__row-cell-chance">
                 <div class="field__row-cell-chance-titles">шанс</div>
                 <div class="field__row-cell-chance-questions">
-                    <img src="src/images/Orange_question.png" alt="Карточка шанс">
+                    <img src="images/Orange_question.png" alt="Карточка шанс">
                 </div>
             </div>
         </td>
@@ -248,7 +243,7 @@
             <div class="field__row-cell-plumbing">
                 <div class="field__row-cell-plumbing-titles">водопровод</div>
                 <div class="field__row-cell-plumbing-picture">
-                    <img src="src/images/vodoprovod.png.png" alt="водопровод">
+                    <img src="images/vodoprovod.png" alt="водопровод">
                 </div>
                 <div class="field__row-cell-powerhouse-titles">м150</div>
             </div>
@@ -259,7 +254,7 @@
             <div class="field__row-cell-powerhouse">
                 <div class="field__row-cell-powerhouse-titles">электростанция</div>
                 <div class="field__row-cell-powerhouse-picture">
-                    <img src="src/images/lamp.png" alt="Электростанция">
+                    <img src="images/lamp.png" alt="Электростанция">
                 </div>
                 <div class="field__row-cell-powerhouse-titles">м150</div>
             </div>
@@ -289,7 +284,7 @@
     <tr class="field__row">
         <td class="field__row-cell">
             <div class="field__row-cell-tojail">
-                <img src="src/images/to-jail%20.gif" alt="Отправляйтесь в тюрьму">
+                <img src="images/to-jail%20.gif" alt="Отправляйтесь в тюрьму">
             </div>
         </td>
         <td class="field__row-cell">
@@ -305,7 +300,7 @@
             <div class="field__row-cell-treasury">
                 <div class="field__row-cell-treasury-titles">общественная казна</div>
                 <div class="field__row-cell-treasury-picture">
-                    <img src="src/images/cazna.png" alt="">
+                    <img src="images/cazna.png" alt="">
                 </div>
             </div>
         </td>
@@ -331,7 +326,7 @@
             <div class="field__row-cell-railway">
                 <div class="field__row-cell-railway-titles">курская железная дорога</div>
                 <div class="field__row-cell-railway-picture">
-                    <img src="src/images/Train.gif" alt="Железная дорога">
+                    <img src="images/Train.gif" alt="Железная дорога">
                 </div>
                 <div class="field__row-cell-railway-titles">м200</div>
             </div>
@@ -358,7 +353,7 @@
             <div class="field__row-cell-chance">
                 <div class="field__row-cell-chance-titles">шанс</div>
                 <div class="field__row-cell-chance-questions">
-                    <img src="src/images/quest_blue.png" alt="Карточка шанс">
+                    <img src="images/quest_blue.png" alt="Карточка шанс">
                 </div>
             </div>
         </td>
@@ -373,11 +368,27 @@
         </td>
         <td class="field__row-cell">
             <div class="field__row-cell-parcing">
-                <img src="src/images/parking_large.png" alt="Бесплатная стоянка">
+                <img src="images/parking_large.png" alt="Бесплатная стоянка">
             </div>
         </td>
     </tr>
 </table>
+<div class="button">
+    <div class="button__link">
+        <a href="#" class="button__link-text">кинуть кубики</a>
+    </div>
+</div>
+<div class="button">
+    <div class="button__link">
+        <a href="#" class="button__link-text">кинуть кубики</a>
+    </div>
+</div>
+<div class="button">
+
+    <div class="button__link">
+        <a href="#" class="button__link-text">кинуть кубики</a>
+    </div>
+</div>
 <div class="button">
     <div class="button__link">
         <a href="#" class="button__link-text">кинуть кубики</a>
