Мелкие исправления и настройка webpack

--- a/src/index.html
+++ b/src/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Monopoly</title>
-    <link rel="stylesheet" href="../dist/style.css">
-    <script src="../dist/index.js"></script>
+    <link rel="stylesheet" href="style.css">
+    <script src="index.js"></script>
 </head>
 <body>
 <table class="field" cellspacing="0">
@@ -373,22 +373,6 @@
         </td>
     </tr>
 </table>
-<div class="button">
-    <div class="button__link">
-        <a href="#" class="button__link-text">кинуть кубики</a>
-    </div>
-</div>
-<div class="button">
-    <div class="button__link">
-        <a href="#" class="button__link-text">кинуть кубики</a>
-    </div>
-</div>
-<div class="button">
-
-    <div class="button__link">
-        <a href="#" class="button__link-text">кинуть кубики</a>
-    </div>
-</div>
 <div class="button">
     <div class="button__link">
         <a href="#" class="button__link-text">кинуть кубики</a>
