Сделала 3 модификатора элементу __row-cell-center-picture

--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
                 <div class="field__row-cell-forward-text">получите зарплату 200м. рублей когда вы проходите это поле <span class="field__row-cell-forward-text_big">вперед</span>
                 </div>
                 <div class="field__row-cell-forward-start">
-                    <img src="images/rightarrow.png" alt="Вперед">
+                    <img src="./images/rightarrow.png" alt="Вперед">
                 </div>
             </div>
         </td>
@@ -40,7 +40,7 @@
             <div class="field__row-cell-chance">
                 <div class="field__row-cell-chance-titles">шанс</div>
                 <div class="field__row-cell-chance-questions">
-                    <img src="images/quest_purple.png" alt="Карточка шанс">
+                    <img src="./images/quest_purple.png" alt="Карточка шанс" class="field__row-cell-chance-picture-questions">
                 </div>
             </div>
         </td>
@@ -66,7 +66,7 @@
             <div class="field__row-cell-treasury">
                 <div class="field__row-cell-treasury-titles">общественная казна</div>
                 <div class="field__row-cell-treasury-picture">
-                    <img src="images/cazna.png" alt="">
+                    <img src="images/cazna.png" alt="Общественная казна. Картинка">
                 </div>
             </div>
         </td>
@@ -115,14 +115,14 @@
         </td>
         <td class="field__row-cell" colspan="9" rowspan="9">
             <div class="field__row-cell-center">
-                <div class="field__row-cell-center-promo">
-                    <img src="images/cazna.png" alt="Общественная казна">
+                <div class="field__row-cell-center-picture">
+                    <img src="images/cazna.png" alt="Общественная казна" class="field__row-cell-center-picture_cazna">
                 </div>
-                <div class="field__row-cell-center-promo">
-                    <img src="images/monopoly_logo.png" alt="Логотип">
+                <div class="field__row-cell-center-picture">
+                    <img src="images/monopoly_logo.png" alt="Логотип" class="field__row-cell-center-picture_logo">
                 </div>
-                <div class="field__row-cell-center-promo">
-                    <img src="images/question-mark.png" alt="Карточка шанс">
+                <div class="field__row-cell-center-picture">
+                    <img src="images/question-mark.png" alt="Карточка шанс" class="field__row-cell-center-picture_chance">
                 </div>
             </div>
         </td>
