--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
                 <div class="field__row-cell-forward-text">получите зарплату 200м. рублей когда вы проходите это поле <span class="field__row-cell-forward-text_big">вперед</span>
                 </div>
                 <div class="field__row-cell-forward-start">
-                    <img src="./images/rightarrow.png" alt="Вперед">
+                    <img alt="Вперед">
                 </div>
             </div>
         </td>
@@ -40,7 +40,7 @@
             <div class="field__row-cell-chance">
                 <div class="field__row-cell-chance-titles">шанс</div>
                 <div class="field__row-cell-chance-questions">
-                    <img src="./images/quest_purple.png" alt="Карточка шанс" class="field__row-cell-chance-picture-questions">
+                    <img alt="Карточка шанс" class="field__row-cell-chance-picture-questions">
                 </div>
             </div>
         </td>
@@ -55,9 +55,9 @@
         </td>
         <td class="field__row-cell">
             <div class="field__row-cell-railway">
-                <div class="field__row-cell-railway-titles">ленинградская <br> железная <br> дорога</div>
+                <div class="field__row-cell-railway-titles">ленинградская железная дорога</div>
                 <div class="field__row-cell-railway-picture">
-                    <img src="images/Train.gif" alt="Железная дорога">
+                    <img alt="Железная дорога">
                 </div>
                 <div class="field__row-cell-railway-titles">м200</div>
             </div>
@@ -66,7 +66,7 @@
             <div class="field__row-cell-treasury">
                 <div class="field__row-cell-treasury-titles">общественная казна</div>
                 <div class="field__row-cell-treasury-picture">
-                    <img src="images/cazna.png" alt="Общественная казна. Картинка">
+                    <img alt="Общественная казна. Картинка">
                 </div>
             </div>
         </td>
@@ -83,7 +83,7 @@
             <div class="field__row-cell-powerhouse">
                 <div class="field__row-cell-powerhouse-titles">сверхналог</div>
                 <div class="field__row-cell-powerhouse-picture">
-                    <img src="images/sverhnalog.png" alt="сверхналог">
+                    <img alt="сверхналог">
                 </div>
                 <div class="field__row-cell-powerhouse-titles">заплати м100</div>
             </div>
@@ -99,7 +99,7 @@
         </td>
         <td class="field__row-cell">
             <div class="field__row-cell-jail">
-                <img src="images/jail.png" alt="В тюрьме. Просто посетили тюрьму">
+                <img alt="В тюрьме. Просто посетили тюрьму">
             </div>
         </td>
     </tr>
@@ -116,13 +116,13 @@
         <td class="field__row-cell" colspan="9" rowspan="9">
             <div class="field__row-cell-center">
                 <div class="field__row-cell-center-picture">
-                    <img src="images/cazna.png" alt="Общественная казна" class="field__row-cell-center-picture_cazna">
+                    <img alt="Общественная казна" class="field__row-cell-center-picture-cazna">
                 </div>
                 <div class="field__row-cell-center-picture">
-                    <img src="images/monopoly_logo.png" alt="Логотип" class="field__row-cell-center-picture_logo">
+                    <img alt="Логотип" class="field__row-cell-center-picture-logo">
                 </div>
                 <div class="field__row-cell-center-picture">
-                    <img src="images/question-mark.png" alt="Карточка шанс" class="field__row-cell-center-picture_chance">
+                    <img alt="Карточка шанс" class="field__row-cell-center-picture-chance">
                 </div>
             </div>
         </td>
@@ -162,7 +162,7 @@
             <div class="field__row-cell-railway">
                 <div class="field__row-cell-railway-titles">казанская железная дорога</div>
                 <div class="field__row-cell-railway-picture">
-                    <img src="images/Train.gif" alt="Железная дорога">
+                    <img alt="Железная дорога">
                 </div>
                 <div class="field__row-cell-railway-titles">м200</div>
             </div>
@@ -194,7 +194,7 @@
             <div class="field__row-cell-railway">
                 <div class="field__row-cell-railway-titles">рижская железная дорога</div>
                 <div class="field__row-cell-railway-picture">
-                    <img src="images/Train.gif" alt="Железная дорога">
+                    <img alt="Железная дорога">
                 </div>
                 <div class="field__row-cell-railway-titles">м200</div>
             </div>
@@ -203,7 +203,7 @@
             <div class="field__row-cell-chance">
                 <div class="field__row-cell-chance-titles">шанс</div>
                 <div class="field__row-cell-chance-questions">
-                    <img src="images/Orange_question.png" alt="Карточка шанс">
+                    <img alt="Карточка шанс">
                 </div>
             </div>
         </td>
@@ -243,7 +243,7 @@
             <div class="field__row-cell-plumbing">
                 <div class="field__row-cell-plumbing-titles">водопровод</div>
                 <div class="field__row-cell-plumbing-picture">
-                    <img src="images/vodoprovod.png" alt="водопровод">
+                    <img alt="водопровод">
                 </div>
                 <div class="field__row-cell-powerhouse-titles">м150</div>
             </div>
@@ -254,7 +254,7 @@
             <div class="field__row-cell-powerhouse">
                 <div class="field__row-cell-powerhouse-titles">электростанция</div>
                 <div class="field__row-cell-powerhouse-picture">
-                    <img src="images/lamp.png" alt="Электростанция">
+                    <img alt="Электростанция">
                 </div>
                 <div class="field__row-cell-powerhouse-titles">м150</div>
             </div>
@@ -284,7 +284,7 @@
     <tr class="field__row">
         <td class="field__row-cell">
             <div class="field__row-cell-tojail">
-                <img src="images/to-jail%20.gif" alt="Отправляйтесь в тюрьму">
+                <img alt="Отправляйтесь в тюрьму">
             </div>
         </td>
         <td class="field__row-cell">
@@ -300,7 +300,7 @@
             <div class="field__row-cell-treasury">
                 <div class="field__row-cell-treasury-titles">общественная казна</div>
                 <div class="field__row-cell-treasury-picture">
-                    <img src="images/cazna.png" alt="">
+                    <img alt="">
                 </div>
             </div>
         </td>
@@ -326,7 +326,7 @@
             <div class="field__row-cell-railway">
                 <div class="field__row-cell-railway-titles">курская железная дорога</div>
                 <div class="field__row-cell-railway-picture">
-                    <img src="images/Train.gif" alt="Железная дорога">
+                    <img alt="Железная дорога">
                 </div>
                 <div class="field__row-cell-railway-titles">м200</div>
             </div>
@@ -353,7 +353,7 @@
             <div class="field__row-cell-chance">
                 <div class="field__row-cell-chance-titles">шанс</div>
                 <div class="field__row-cell-chance-questions">
-                    <img src="images/quest_blue.png" alt="Карточка шанс">
+                    <img alt="Карточка шанс">
                 </div>
             </div>
         </td>
@@ -368,7 +368,7 @@
         </td>
         <td class="field__row-cell">
             <div class="field__row-cell-parcing">
-                <img src="images/parking_large.png" alt="Бесплатная стоянка">
+                <img alt="Бесплатная стоянка">
             </div>
         </td>
     </tr>
