--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Monopoly</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles.css">
     <script src="index.js"></script>
 </head>
 <body>
@@ -16,6 +16,7 @@
                 <div class="field__row-cell-forward-start">
                     <img alt="Вперед">
                 </div>
+
             </div>
         </td>
         <td class="field__row-cell">
@@ -187,7 +188,6 @@
                 </div>
             </div>
         </td>
-
     </tr>
     <tr class="field__row">
         <td class="field__row-cell">
@@ -227,7 +227,6 @@
                 </div>
             </div>
         </td>
-
     </tr>
     <tr class="field__row">
         <td class="field__row-cell">
