Фикс текущего состояния репозитория

--- a/src/index.html
+++ b/src/index.html
@@ -13,8 +13,8 @@
             <div class="field__row-cell-forward">
                 <div class="field__row-cell-forward-text">получите зарплату 200м. рублей когда вы проходите это поле <span class="field__row-cell-forward-text_big">вперед</span>
                 </div>
-                <div class="field__row-cell-forward-start">
-                    <img alt="Вперед">
+                <div class="field__row-cell-forward-picture">
+                    <img alt="Вперед" class="field__row-cell-forward-picture-start">
                 </div>
 
             </div>
